--- a/modules/role/views/role.twig
+++ b/modules/role/views/role.twig
@@ -65,6 +65,10 @@
 								</span>
 							</td>
 						</tr>
+					{% else %}
+						<tr>
+							<td colspan="3">No Data</td>
+						</tr>
 					{% endfor %}
 				</tbody>
 			</table>
