--- a/src/views/layouts/app.twig
+++ b/src/views/layouts/app.twig
@@ -31,13 +31,22 @@
 						{{ block("body") }}
 					</div>
 				</div>
+				<footer class="footer">
+					<div class="container">
+						<div class="py-7 border-top-light">
+							Made with
+							<span class="text-red">
+								<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-filled icon-tabler icon-tabler-heart" width="24" height="24" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<desc>Download more icon variants from https://tabler-icons.io/i/heart</desc>
+									<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+									<path d="M19.5 12.572l-7.5 7.428-7.5-7.428m0 0a5 5 0 1 1 7.5-6.566 5 5 0 1 1 7.5 6.572"></path>
+								</svg>
+							</span>
+							in Magelang, ID.
+						</div>
+					</div>
+				</div>
 			</footer>
 		</div>
-
-		<script src="{{ base_url ('/js/app.min.js')}}"></script>
-		<script src="{{ base_url ('/vendor/jquery/jquery-3.6.0.min.js')}}"></script>
-		<script src="{{ base_url ('/vendor/sweetalert/sweetalert2.all.min.js')}}"></script>
-
-		{{ block("scripts") }}
 	</body>
-</html>
+</html></div><script src="{{ base_url ('/js/app.min.js')}}"></script><script src="{{ base_url ('/vendor/jquery/jquery-3.6.0.min.js')}}"></script><script src="{{ base_url ('/vendor/sweetalert/sweetalert2.all.min.js')}}"></script>{{ block("scripts") }}</body></html>
