--- a/src/views/layouts/partials/dropdown.twig
+++ b/src/views/layouts/partials/dropdown.twig
@@ -1,6 +1,6 @@
 <div class="nav-item dropdown">
     <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
-        <span class="avatar avatar-sm bg-white" style="background-image: url(/img/user-circle.svg)"></span>
+        <span class="border avatar avatar-sm bg-white" style="background-image: url(/img/user-circle.svg)"></span>
         <div class="d-none d-xl-block ps-2">
             <div> {{ session.user.name ?? '-' }} </div>
             <div class="mt-1 small text-muted">{{ session.user.role ?? '-' }}</div>
