--- a/src/views/layouts/partials/header.twig
+++ b/src/views/layouts/partials/header.twig
@@ -1,12 +1,33 @@
 <header class="navbar navbar-expand-md navbar-light d-none d-lg-flex d-print-none">
-    <div class="container-xl">
-        <div class="navbar-nav flex-row order-md-last">
-            {% include "layouts/partials/dropdown.twig" %}
-        </div>
-        <div class="collapse navbar-collapse">
-            <div>
-                
-            </div>
-        </div>
-    </div>
+	<div class="container-xl">
+		<div class="navbar-nav flex-row order-md-last">
+			{% include "layouts/partials/dropdown.twig" %}
+		</div>
+		<div class="collapse navbar-collapse">
+			<div>
+				<div class="btn-list">
+					<a
+						href="https://github.com/damasdev/codeigniter" class="btn" target="_blank" rel="noreferrer">
+						<!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
+						<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+							<desc>Download more icon variants from https://tabler-icons.io/i/brand-github</desc>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+							<path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
+						</svg>
+						Source code
+					</a>
+					<a
+						href="https://trakteer.id/codewithdamas/tip" class="btn" target="_blank" rel="noreferrer">
+						<!-- Download SVG icon from http://tabler-icons.io/i/heart -->
+						<svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink" width="24" height="24" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+							<desc>Download more icon variants from https://tabler-icons.io/i/heart</desc>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+							<path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572"></path>
+						</svg>
+						Sponsor
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </header>
