--- a/modules/feature/views/feature.twig
+++ b/modules/feature/views/feature.twig
@@ -84,7 +84,7 @@
 			<h2 class="offcanvas-title" id="canvasLabel">Create Feature</h2>
 			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
-		<form method="post" id="form">
+		<form id="form" method="post">
 			<div class="offcanvas-body">
 				<div>
 					<div class="form-group mb-3">
