--- a/modules/role/views/role.twig
+++ b/modules/role/views/role.twig
@@ -39,7 +39,6 @@
 				<thead>
 					<tr>
 						<th>Name</th>
-						<th>Description</th>
 						<th>Type</th>
 						<th class="w-25">Action</th>
 					</tr>
@@ -48,7 +47,6 @@
 					{% for role in roles %}
 						<tr id="{{ role.id }}">
 							<td class="text-muted">{{ role.name }}</td>
-							<td class="text-muted">{{ role.description }}</td>
 							<td class="text-muted">
 								<span class="badge badge-primary">{{ role.type }}</span>
 							</td>
@@ -84,16 +82,12 @@
 			<h2 class="offcanvas-title" id="canvasLabel">Create Role</h2>
 			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
-		<form method="post" id="form">
+		<form id="form" method="post">
 			<div class="offcanvas-body">
 				<div>
 					<div class="form-group mb-3">
 						<label for="name">Name</label>
 						<input type="text" class="form-control" name="name" id="name" placeholder="Name">
-					</div>
-					<div class="form-group mb-3">
-						<label for="description">Description</label>
-						<input type="text" class="form-control" name="description" id="description" placeholder="Description">
 					</div>
 				</div>
 				<div class="mt-3">
