--- a/modules/role/views/role.twig
+++ b/modules/role/views/role.twig
@@ -34,8 +34,8 @@
 
 {% block body %}
 	<div class="card">
-		<div class="table-responsive">
-			<table class="table table-vcenter card-table table-striped">
+		<div class="card-body">
+			<table class="table" id="role">
 				<thead>
 					<tr>
 						<th>Name</th>
@@ -43,36 +43,7 @@
 						<th class="w-25">Action</th>
 					</tr>
 				</thead>
-				<tbody>
-					{% for role in roles %}
-						<tr id="{{ role.id }}">
-							<td class="text-muted">{{ role.name }}</td>
-							<td class="text-muted">
-								<span class="badge badge-primary">{{ role.type }}</span>
-							</td>
-							<td class="text-muted">
-								<a href="{{ base_url('role') }}/{{role.id}}" class="btn btn-sm text-primary">
-									<i class="ti ti-list-details"></i>
-									Detail
-								</a>
-								|
-								<a href="{{ base_url('role') }}/{{role.id}}/edit" class="btn btn-sm text-warning">
-									<i class="ti ti-edit"></i>
-									Edit
-								</a>
-								|
-								<span class="btn btn-sm text-danger remove">
-									<i class="ti ti-trash"></i>
-									Delete
-								</span>
-							</td>
-						</tr>
-					{% else %}
-						<tr>
-							<td colspan="4">No Data</td>
-						</tr>
-					{% endfor %}
-				</tbody>
+				<tbody></tbody>
 			</table>
 		</div>
 	</div>
@@ -101,5 +72,10 @@
 {% endblock %}
 
 {% block scripts %}
+	<script src="{{ base_url ('/vendor/datatables/js/datatables.min.js')}}"></script>
 	<script src="{{ base_url ('/js/modules/role/role.js')}}"></script>
+{% endblock %}
+
+{% block styles %}
+	<link rel="stylesheet" href="{{ base_url ('/vendor/datatables/css/datatables.min.css')}}">
 {% endblock %}
