--- a/modules/user/views/user.twig
+++ b/modules/user/views/user.twig
@@ -34,45 +34,16 @@
 
 {% block body %}
 	<div class="card">
-		<div class="table-responsive">
-			<table class="table table-vcenter card-table table-striped">
+		<div class="card-body">
+			<table class="table" id="user">
 				<thead>
 					<tr>
 						<th>Name</th>
 						<th>Email</th>
 						<th>Role</th>
-						<th class="w-25">Action</th>
+						<th>Action</th>
 					</tr>
 				</thead>
-				<tbody>
-					{% for user in users %}
-						<tr id="{{ user.id }}">
-							<td class="text-muted">{{ user.name }}</td>
-							<td class="text-muted">{{ user.email }}</td>
-							<td class="text-muted">{{ user.role }}</td>
-							<td class="text-muted">
-								<a href="{{ base_url('user') }}/{{user.id}}" class="btn btn-sm text-primary">
-									<i class="ti ti-list-details"></i>
-									Detail
-								</a>
-								|
-								<a href="{{ base_url('user') }}/{{user.id}}/edit" class="btn btn-sm text-warning">
-									<i class="ti ti-edit"></i>
-									Edit
-								</a>
-								|
-								<span class="btn btn-sm text-danger remove">
-									<i class="ti ti-trash"></i>
-									Delete
-								</span>
-							</td>
-						</tr>
-					{% else %}
-						<tr>
-							<td colspan="4">No Data</td>
-						</tr>
-					{% endfor %}
-				</tbody>
 			</table>
 		</div>
 	</div>
@@ -117,5 +88,10 @@
 {% endblock %}
 
 {% block scripts %}
+	<script src="{{ base_url ('/vendor/datatables/js/datatables.min.js')}}"></script>
 	<script src="{{ base_url ('/js/modules/user/user.js')}}"></script>
+{% endblock %}
+
+{% block styles %}
+	<link rel="stylesheet" href="{{ base_url ('/vendor/datatables/css/datatables.min.css')}}">
 {% endblock %}
