--- a/modules/auth/views/layouts/auth.twig
+++ b/modules/auth/views/layouts/auth.twig
@@ -8,6 +8,9 @@
 
 		<link href="{{ base_url('/css/app.min.css') }}" rel="stylesheet"/>
 		<link href="{{ base_url('/css/app-vendors.min.css') }}" rel="stylesheet"/>
+		<script>
+			let baseURL = "{{ base_url () }}";
+		</script>
 	</head>
 
 	<body class="border-top-wide border-primary d-flex flex-column theme-light">
@@ -28,6 +31,9 @@
 			</div>
 		</div>
 
+		<script src="{{ base_url ('/vendor/jquery/jquery-3.6.0.min.js')}}"></script>
+		<script src="{{ base_url ('/vendor/sweetalert/sweetalert2.all.min.js')}}"></script>
 		<script src="{{ base_url('/js/app.min.js') }}"></script>
+		{{ block("scripts") }}
 	</body>
 </html>
