--- a/modules/auth/views/login.twig
+++ b/modules/auth/views/login.twig
@@ -1,51 +1,46 @@
 {% extends 'layouts/auth.twig' %}
 
 {% block body %}
-{{ form_open ('auth/login', 'class="card card-md"') }}
-<div class="card-body">
+	<form id="form">
+		<div class="card card-md">
 
-    {% if message %}
-    <div class="alert alert-danger" role="alert">
-        {{ message }}
-    </div>
-    {% endif %}
+			<div class="card-body">
 
-    <div class="mb-3">
-        <label class="form-label">Email address</label>
-        {{ form_input (email) }}
-    </div>
-    <div class="mb-2">
-        <label class="form-label">
-            Password
-        </label>
-        <div class="input-group input-group-flat">
-            {{ form_input (password) }}
-            <span class="input-group-text">
-                <a href="#" class="link-secondary" title="" data-bs-toggle="tooltip"
-                    data-bs-original-title="Show password">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
-                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                        <circle cx="12" cy="12" r="2"></circle>
-                        <path
-                            d="M22 12c-2.667 4.667 -6 7 -10 7s-7.333 -2.333 -10 -7c2.667 -4.667 6 -7 10 -7s7.333 2.333 10 7">
-                        </path>
-                    </svg>
-                </a>
-            </span>
-        </div>
-    </div>
-    <div class="mb-2">
-        <label class="form-check">
-            {{ form_checkbox ('remember', '1', FALSE, 'class="form-check-input"') }}
-            <span class="form-check-label">Remember me on this device</span>
-        </label>
-    </div>
-    <div class="form-footer mb-2">
-        <button type="submit" class="btn btn-primary w-100">Sign in</button>
-    </div>
-</div>
-{{ form_close () }}
+				<div class="mb-3">
+					<label class="form-label">Email address</label>
+					<input type="email" class="form-control" name="email" placeholder="Email">
+				</div>
+				<div class="mb-2">
+					<label class="form-label">
+						Password
+					</label>
+					<div class="input-group input-group-flat">
+						<input type="password" class="form-control" name="password" placeholder="Password">
+						<span class="input-group-text">
+							<a href="#" class="link-secondary" title="" data-bs-toggle="tooltip" data-bs-original-title="Show password">
+								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+									<circle cx="12" cy="12" r="2"></circle>
+									<path d="M22 12c-2.667 4.667 -6 7 -10 7s-7.333 -2.333 -10 -7c2.667 -4.667 6 -7 10 -7s7.333 2.333 10 7"></path>
+								</svg>
+							</a>
+						</span>
+					</div>
+				</div>
+				<div class="mb-2">
+					<label class="form-check">
+						{{ form_checkbox ('remember', '1', FALSE, 'class="form-check-input"') }}
+						<span class="form-check-label">Remember me on this device</span>
+					</label>
+				</div>
+				<div class="form-footer mb-2">
+					<button id="submit" type="button" class="btn btn-primary w-100">Sign in</button>
+				</div>
+			</div>
+		</div>
+	</form>
+{% endblock %}
 
+{% block scripts %}
+	<script src="{{ base_url ('/js/modules/auth/login.js')}}"></script>
 {% endblock %}
