--- a/modules/menu/views/menu.twig
+++ b/modules/menu/views/menu.twig
@@ -53,7 +53,7 @@
 			<h2 class="offcanvas-title" id="canvasLabel">Create Menu</h2>
 			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
-		<form id="form" method="post">
+		<form id="form">
 			<div class="offcanvas-body">
 				<div>
 					<div class="form-group mb-3">
