--- a/modules/user/views/edit-user.twig
+++ b/modules/user/views/edit-user.twig
@@ -35,7 +35,7 @@
 {% endblock %}
 
 {% block body %}
-	<form id="form" method="post" class="card">
+	<form id="form" class="card">
 		<div class="card-body">
 			<div class="form-group mb-3">
 				<label for="name">Name</label>
