style(*): fix return type

--- a/modules/user/views/user.twig
+++ b/modules/user/views/user.twig
@@ -35,16 +35,18 @@
 {% block body %}
 	<div class="card">
 		<div class="card-body">
-			<table class="table" id="user">
-				<thead>
-					<tr>
-						<th>Name</th>
-						<th>Email</th>
-						<th>Role</th>
-						<th>Action</th>
-					</tr>
-				</thead>
-			</table>
+			<div class="table-responsive">
+				<table class="table" id="user">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Email</th>
+							<th>Role</th>
+							<th>Action</th>
+						</tr>
+					</thead>
+				</table>
+			</div>
 		</div>
 	</div>
 
