--- a/modules/role/views/role.twig
+++ b/modules/role/views/role.twig
@@ -35,15 +35,17 @@
 {% block body %}
 	<div class="card">
 		<div class="card-body">
-			<table class="table" id="role">
-				<thead>
-					<tr>
-						<th>Name</th>
-						<th>Type</th>
-						<th class="w-25">Action</th>
-					</tr>
-				</thead>
-			</table>
+			<div class="table-responsive">
+				<table class="table" id="role">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Type</th>
+							<th class="w-25">Action</th>
+						</tr>
+					</thead>
+				</table>
+			</div>
 		</div>
 	</div>
 
