--- a/modules/menu/views/menu.twig
+++ b/modules/menu/views/menu.twig
@@ -36,7 +36,7 @@
 	<div class="card">
 		<div class="card-body">
 			<div class="table-responsive">
-				<table class="table" id="menu">
+				<table class="table nowrap" id="menu">
 					<thead>
 						<tr>
 							<th>Name</th>
