--- a/modules/role/views/role.twig
+++ b/modules/role/views/role.twig
@@ -36,7 +36,7 @@
 	<div class="card">
 		<div class="card-body">
 			<div class="table-responsive">
-				<table class="table" id="role">
+				<table class="table nowrap" id="role">
 					<thead>
 						<tr>
 							<th>Name</th>
