--- a/modules/role/views/role.twig
+++ b/modules/role/views/role.twig
@@ -36,7 +36,7 @@
 	<div class="card">
 		<div class="card-body">
 			<div class="table-responsive">
-				<table class="table nowrap" id="role">
+				<table class="table table-striped nowrap border" id="role">
 					<thead>
 						<tr>
 							<th>Name</th>
@@ -44,6 +44,7 @@
 							<th class="w-25">Action</th>
 						</tr>
 					</thead>
+					<tbody class="table-tbody"></tbody>
 				</table>
 			</div>
 		</div>
