--- a/modules/feature/views/feature.twig
+++ b/modules/feature/views/feature.twig
@@ -36,7 +36,7 @@
 	<div class="card">
 		<div class="card-body">
 			<div class="table-responsive">
-				<table class="table nowrap" id="feature">
+				<table class="table table-striped nowrap border" id="feature">
 					<thead>
 						<tr>
 							<th>Module</th>
