--- a/modules/role/views/role.twig
+++ b/modules/role/views/role.twig
@@ -40,7 +40,7 @@
 					<thead>
 						<tr>
 							<th>Name</th>
-							<th>Type</th>
+							<th>Code</th>
 							<th class="w-25">Action</th>
 						</tr>
 					</thead>
@@ -61,6 +61,10 @@
 					<div class="form-group mb-3">
 						<label for="name">Name</label>
 						<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+					</div>
+					<div class="form-group mb-3">
+						<label for="code">Code</label>
+						<input type="text" class="form-control" name="code" id="code" placeholder="Code">
 					</div>
 				</div>
 				<div class="mt-3">
