--- a/modules/role/views/show-role.twig
+++ b/modules/role/views/show-role.twig
@@ -49,6 +49,10 @@
 						<td class="text-muted">Name</td>
 						<td class="text-muted">{{ role.name }}</td>
 					</tr>
+					<tr>
+						<td class="text-muted">Code</td>
+						<td class="text-muted">{{ role.code }}</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
