remove unused line of code

--- a/modules/auth/views/login.twig
+++ b/modules/auth/views/login.twig
@@ -29,7 +29,7 @@
 				</div>
 				<div class="mb-2">
 					<label class="form-check">
-						{{ form_checkbox ('remember', '1', FALSE, 'class="form-check-input"') }}
+						{{ form_checkbox ('remember', '1', false, 'class="form-check-input"') }}
 						<span class="form-check-label">Remember me on this device</span>
 					</label>
 				</div>
