--- a/src/views/layouts/app-vertical.twig
+++ b/src/views/layouts/app-vertical.twig
@@ -2,6 +2,7 @@
 
 	<head>
 		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width"/>
 
 		<title>
 			{{ title | default("CODEIGNITER") }}
