--- a/modules/role/views/show-role.twig
+++ b/modules/role/views/show-role.twig
@@ -57,7 +57,7 @@
 			</table>
 		</div>
 		<div class="card-footer">
-			<a href="{{ base_url('role') }}/{{role.id}}/edit" class="btn btn-primary d-none d-sm-inline-block">
+			<a href="{{ base_url('role') }}/{{role.code}}/edit" class="btn btn-primary d-none d-sm-inline-block">
 				<i class="ti ti-edit"></i>
 				Edit
 			</a>
