--- a/modules/role/views/edit-role.twig
+++ b/modules/role/views/edit-role.twig
@@ -52,5 +52,5 @@
 {% endblock %}
 
 {% block scripts %}
-	<script src="{{ base_url ('/js/modules/role/edit-role.js')}}"></script>
+	<script src="{{ base_url ('/js/modules/role/edit-role.js')}}{{ ver['js']['edit_role'] }}"></script>
 {% endblock %}
