--- a/modules/user/views/edit-user.twig
+++ b/modules/user/views/edit-user.twig
@@ -72,5 +72,5 @@
 {% endblock %}
 
 {% block scripts %}
-	<script src="{{ base_url ('/js/modules/user/edit-user.js')}}"></script>
+	<script src="{{ base_url ('/js/modules/user/edit-user.js')}}{{ ver['js']['edit_user'] }}"></script>
 {% endblock %}
